Fix spacing

--- a/packages/@uppy/webcam/src/style.scss
+++ b/packages/@uppy/webcam/src/style.scss
@@ -110,7 +110,7 @@
   line-height: 1.35;
   font-weight: 400;
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   padding: 0 15px;
   max-width: 500px;
   text-align: center;
